dataset1235/2025-2/1153765216/users/641768463/executions/2747719322_3691284457.log
== SUBMISSION (2025-08-21 20:45:26)
-- CODE: 
Nota1 = float(input())
Nota2 = float(input())
Nota3 = float(input())
Nota4 = float(input())
Media = (Nota1 + Nota2*2 + Nota3*3 + Nota4*4)/10
print (round(Media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 20:45:13)
-- CODE: 
Nota1 = float(input())
Nota2 = float(input())
Nota3 = float(input())
Nota4 = float(input())
Media = (Nota1 + Nota2*2 + Nota3*3 + Nota4*4)/10
print (round(Media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 20:44:09)
-- CODE: 
Nota1 = Float(input())
Nota2 = Float(input())
Nota3 = Float(input())
Nota4 = Float(input())
Media = (Nota1 + Nota2*2 + Nota3*3 + Nota4*4)/10
print (round(Media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Nota1 = Float(input())
            ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
